Spark 3.5: MERGE INTO on partitioned tables; hand a submitted chunk over to the background writer
MERGE with a WHEN NOT MATCHED ... INSERT action on a partitioned table was
refused at analysis. It is now written like an INSERT into that table:
VastPartitionedTable.newWriteBuilder gives a MERGE the partitioned write
builder, so Spark clusters the delta by the partition keys (V2Writes applies
the required distribution to WriteDelta too), and the INSERT context of the
merge writer computes the partition keys over the columns a merge row
actually carries, the data columns, instead of table-schema indices that are
off by one once the row id slot is dropped. DELETE, UPDATE and the delete and
update rows of a MERGE keep the plain builder.

Also fixes a race the partitioned writer test exposed: QueueCtx kept
currentRoot pointing at a chunk it had already handed to the background
writer's queue, and flushQueues() (at commit, or when max_insert_buckets is
exceeded) closed that root when it stole the remaining rows of a context, so
a chunk still queued or being serialized was sent as all-NULL rows. The
window opens whenever the last chunk of a context is exactly full, for MERGE
inserts and, since every table's inserts go through the partition contexts,
for plain INSERT. submitInsertChunk() now hands the chunk over and forgets it;
the background writer closes it as before.

Both trees (spark35, spark35-scala212). Tests: the resolution rule now
expands stars on a partitioned target; the merge writer chunks inserted rows
per partition key (identity and bucket transforms) and keeps two full chunks
committed right away intact for MERGE and for plain INSERT (both fail without
the fix); TestVastCatalog analyzes and optimizes an upsert into a partitioned
table (VastPartitionedWriteBuilder, RepartitionByExpression on the partition
key over MergeRows, plain builder for DELETE/UPDATE) with a spied client
layout, via the NDBTestClients test helper.

Co-Authored-By: Claude Fable 5.1 <norep